# custom-linux-build

./: .gitignore  .gitmodules  10.log.old  README.md  addNetWirelessDriversKconfgig  addNetWirelessDriversMakefile  depends_notes.txt  dts_snippets.txt  notes  package-lock.json  rootfs.tar.xz  xorg.conf
Melodia-Launcher/: com.melodia.launcher.json  meson.build
Melodia-Launcher/data/: com.melodia.launcher.appdata.xml.in  meson.build  (+2 more)
Melodia-Launcher/src/: main.c  melodia_launcher.gresource.xml  meson.build
Melodia-Launcher/src/app/: melodia_launcher-application.c  melodia_launcher-application.h
Melodia-Launcher/src/dashboard/: melodia_launcher-window.c  melodia_launcher-window.h
Melodia-Launcher/src/test/: test.c  test.h
Melodia-Launcher/src/ui/: dashboard.ui  test.ui
build_system_src/: main.cpp
config/: boot.cmd  melodia_defconfig
patch/: Kconfig  Makefile  melodia_defconfig  sun50i-h618-orangepi-zero2w.dts
scripts/: add_dts.sh  apply_wifi_patch.sh  bootstrap.sh  build.sh  build_image.sh  compile__comands.txt  compile_all.sh  compile_dtb.sh  compile_kernel_image.sh  compile_linux.sh  compile_modules.sh  compile_trusted-firmare-a.sh  compile_u-boot.sh  download-rootfs.sh  finish_build.sh  format_image.sh  install_u-boot.sh  make_img.sh  make_rootfs.sh  mount_image.sh  populate_boot.sh  toolchain.sh  update_submodules.sh
server/: README.md  package.json  setup-mongodb.md
uwe5622/: Kconfig  Makefile
web-client/: .env  .env.production  10.log.old  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1694483673957-357e3b5cbc29b.mjs
(+98 files in other folders)
